@@ -44,7 +44,6 @@ import java.util.function.Supplier;
 
 import static com.hedera.services.context.properties.StaticPropertiesHolder.STATIC_PROPERTIES;
 import static com.hedera.services.state.submerkle.RichInstant.fromJava;
-import static java.util.stream.Collectors.toList;
 
 public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	private static final Logger log = LogManager.getLogger(MerkleNetworkContext.class);
@@ -68,7 +67,7 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	static final Instant[] NO_CONGESTION_STARTS = new Instant[0];
 	static final DeterministicThrottle.UsageSnapshot[] NO_SNAPSHOTS = new DeterministicThrottle.UsageSnapshot[0];
 
-	public static final Instant UNKNOWN_CONSENSUS_TIME = null;
+	public static final Instant NULL_CONSENSUS_TIME = null;
 
 	static DomainSerdes serdes = new DomainSerdes();
 	static Supplier<ExchangeRates> ratesSupplier = ExchangeRates::new;
@@ -78,7 +77,7 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	private Instant[] congestionLevelStarts = NO_CONGESTION_STARTS;
 	private ExchangeRates midnightRates;
 	private Instant lastMidnightBoundaryCheck = null;
-	private Instant consensusTimeOfLastHandledTxn = UNKNOWN_CONSENSUS_TIME;
+	private Instant consensusTimeOfLastHandledTxn = NULL_CONSENSUS_TIME;
 	private SequenceNumber seqNo;
 	private long lastScannedEntity;
 	private long entitiesScannedThisSecond = 0L;
@@ -369,7 +368,7 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	}
 
 	private String congestionStartsDesc() {
-		if (congestionLevelStarts.length == 0)	 {
+		if (congestionLevelStarts.length == 0) {
 			return NOT_AVAILABLE_SUFFIX;
 		} else {
 			final var sb = new StringBuilder();
@@ -464,7 +463,7 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	private void reset(List<DeterministicThrottle> throttles) {
 		var currUsageSnapshots = throttles.stream()
 				.map(DeterministicThrottle::usageSnapshot)
-				.collect(toList());
+				.toList();
 		for (int i = 0, n = usageSnapshots.length; i < n; i++) {
 			var savedUsageSnapshot = usageSnapshots[i];
 			var throttle = throttles.get(i);
